--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-  <meta charset='UTF-8'>
-  <meta http-equiv="Refresh" content="2; url=public/index.html">
-  <title>Title</title>
+    <meta charset='UTF-8'>
+    <meta http-equiv="Refresh" content="2; url=public/index.html">
+    <title>Ekinsu Bozdag</title>
 </head>
 <body>
 
